Samples bug - the fullscreen MediaPlayer cuts off the controls
There was a bug in the samples where the controls got cut off. This is
because the MediaPlayer will size itself to 100% of the parent
container, which was the body tag previously. The body scrolled off the
page so the transport controls appeared cut off.

--- a/tvjs/src/MediaPlayer/mediaplayer-1.0.0.0.css
+++ b/tvjs/src/MediaPlayer/mediaplayer-1.0.0.0.css
@@ -539,8 +539,8 @@ the style "-ms-touch-select: none;"
   position: absolute;
   top: 0px;
   left: 0px;
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
 }
 .tv-mediaplayer .tv-mediaplayer-hidden {
   display: none;
